--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-v2
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body style="background-color: black; color: whitesmoke;">
+    v3
+</body>
+</html>
